--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <!-- Header Section-->
+    <header>
+        <img class="logo" src="./img/logo copia.png" alt="Logo Boolean">
+        <span><strong>Toboolist</strong></span>
+    </header>
+
+    <!-- Main Container -->
+
+    <!-- Nav Section -->
+
+    <!-- New Task Section -->
     
+    <!-- Today Section -->
+
+    <!-- Upcoming Section -->
 </body>
 </html>
