--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
         <span><strong>Toboolist</strong></span>
     </header>
 
-    <!-- Main Container -->
+    <!-- Main and Nav Section -->
+    <main>
+        <nav class="white">
+           <span class="add-task lightblue"> Add Task</span>
+           <span class="add-section"> Add Section</span>
+        </nav>
+    </main>
 
-    <!-- Nav Section -->
 
     <!-- New Task Section -->
     
