--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- New Task Section -->
         <div class="white">
             <section>
-                <h3>&blacktriangledown; New Task</h3>
+                <h3 id="first-title"> &blacktriangledown; New Task</h3>
                 <ul class="row">
                     <li><span class="check">&check;</span> Quarterly Newslettert
                     <span class="editorial">Editorial</span>
@@ -62,7 +62,7 @@
                     <span class="website">Website</span>
                     </li>
 
-                    <li><span class="delete">&#9587;</span> Interview John H.
+                    <li><span class="check">&check;</span> Interview John H.
                     <span class="sales">Sales</span>
                     </li>
               
