--- a/index.html
+++ b/index.html
@@ -62,17 +62,16 @@
                     <span class="website">Website</span>
                     </li>
 
-                    <li><span class="check">&check;</span> Interview John H.
+                    <li><span class="check">&check;</span> onboard new Sales team members
                     <span class="sales">Sales</span>
                     </li>
               
-                    <li><span class="check">&check;</span> Summit update to mobile storefronts
+                    <li><span class="check">&check;</span> Review editorial calendar
                     <span class="editorial">Editorial</span>
                     </li>
                 </ul>
             </section>
         </div>
     </main>
-
 </body>
 </html>
