--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            <span class="add-section"> Add Section</span>
         </nav>
         <!-- New Task Section -->
-        <div id="main-container" class="white">
+        <div class="main-container white">
             <section>
                 <h3 id="first-title"> &blacktriangledown; New Task</h3>
                 <ul class="row">
@@ -30,6 +30,7 @@
                     </li>
                 </ul>
             </section>
+
                <!-- Today Section -->
             <section>
                 <h3>&blacktriangledown; Today</h3>
@@ -51,7 +52,7 @@
                     </li>
                 </ul>
             </section>
-
+            <!-- Upcoming Section -->
             <section>
                 <h3>&blacktriangledown; Upcoming</h3>
                 <ul class="row">
