--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- Main and Nav Section -->
     <main>
         <nav class="white">
-           <span class="add-task lightblue"> Add Task</span>
-           <span class="add-section"> Add Section</span>
+           <button class="add-task lightblue"> Add Task</button>
+           <button class="add-section"> Add Section</button>
         </nav>
         <!-- New Task Section -->
         <div class="main-container white">
